--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>web developming as art</title>
+	<title>Web development as Art</title>
 	<link rel="stylesheet" type="text/css" href="/styles/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
