:pencil: change the font size and cursor style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 	<div class="consoleWrapper">
 		<div class="consoleViewport">
-			Wake up, Neo!<span class="consoleCursor blink">_</span>	
+			Wake up, Neo...<span class="consoleCursor blink"></span>	
 		</div>
 </body>
