:lipstick: change cv

--- a/cv/index.html
+++ b/cv/index.html
@@ -49,12 +49,12 @@
                 </div>
               </div>
               <div class="row">
-                <div class="row__col"><span class="year">2015</span></div>
+                <div class="row__col"><span class="year">2015 - 2016</span></div>
                 <div class="row__col">
                   <div><b>Full stack developer in rifttools.ru</b></div>
                   This project is billing system for VR attractions.
                   I developed UI for real-time monitoring machine state and operator actions.
-                  Also I made backend server for this purposes. <br>
+                  Also I made backend server for this purposes.<br>
                   Basic technologies that I used:
                   <i>AngularJS</i>,
                   <i>Moment.js</i>,
@@ -76,14 +76,24 @@
                 <i>Sass</i>.
               </div>
               <div class="row">
-                <div class="row__col"><span class="year">since Jul 2016</span></div>
-                <div class="row__col"><b>Frontend developer in Voiptime</b></div>
-                Now I'm working in Voiptime. We develop cloud Lead Management System with dialer.
-                Also I write tests using Selenium. <br>
+                <div class="row__col"><span class="year">2016 - 2018</span></div>
+                <div class="row__col"><b>Frontend developer in Voiptimecloud</b></div>
+                In Voiptimecloud I worked on a cloud lead management system with a dialer.
+                Also I wrote tests using Selenium.<br>
                 Basic technologies:
-                <i>ReactJS</i>,
-                <i>Redux</i>,
+                <i>react/redux</i>,
+                <i>redux-saga</i>,
                 <i>Selenium Web Driver</i>.
+              </div>
+              <div class="row">
+                <div class="row__col"><span class="year">since Aug 2018</span></div>
+                <div class="row__col"><b>Front end developer in Ukrinsoft</b></div>
+                In this company I'm working on a few projects on ReactNative.<br>
+                Basic technologies:
+                <i>ReactNative</i>,
+                <i>React/redux</i>,
+                <i>redux-saga</i>,
+                <i>redux-thunk</i>
               </div>
             </div>
           </section>
@@ -92,22 +102,23 @@
               <h3>Development skills</h3>
               <div class="technologies">
                 <div class="technology">
-                  <b>HTML</b>
-                  <small>CSS, Pug(Jade), Sass(SCSS)</small>
+                  <b>JavaScript/Node.js</b>
+                  <small>ES7, react/redux, flow, express, sequelize</small>
                 </div>
                 <div class="technology">
-                  <b>JavaScript</b>
-                  <small>ReactJS, AngularJS, jQuery, NW.js, Underscore.js, Lowdb, Express.js</small>
+                  <b>Android/iOS</b>
+                  <small>ReactNative</small>
                 </div>
                 <div class="technology">
-                  <b>Selenium Web Driver</b>
+                    <b>Clouds</b>
+                    <small>AWS, Firebase</small>
+                  </div>
+                <div class="technology">
+                  <b>HTML/CSS</b>
+                  <small>jade, sass</small>
                 </div>
                 <div class="technology">
-                  <b>PHP</b>
-                  <small>Wordpress, ModX, Joomla, Laravel</small>
-                </div>
-                <div class="technology">
-                  <b>MySQL</b>
+                  <b>Databases</b>
                 </div>
               </div>
             </div>
@@ -116,8 +127,7 @@
             <div class="container">
               <h3>Software skills</h3>
               <div class="technology">
-                Linux, npm, git, gulp
-                Gimp, Inkscape, Avocode, etc
+                Linux, macOS, Xcode, VSCode, npm, git, gulp, etc
               </div>
             </div>
           </section>
