--- a/cv/index.html
+++ b/cv/index.html
@@ -52,9 +52,9 @@
                 <div class="row__col"><span class="year">2015 - 2016</span></div>
                 <div class="row__col">
                   <div><b>Full stack developer in rifttools.ru</b></div>
-                  This project is billing system for VR attractions.
-                  I developed UI for real-time monitoring machine state and operator actions.
-                  Also I made backend server for this purposes.<br>
+                  This is billing system for VR attractions.
+                  I developed UI for real-time monitoring machine state and operator's actions.</br>
+                  Also I designed backend for this purposes.<br>
                   Basic technologies that I used:
                   <i>AngularJS</i>,
                   <i>Moment.js</i>,
@@ -63,7 +63,7 @@
                   <i>Mysql</i>.
                 </div>
               </div>
-              <div class="row">
+              <!-- <div class="row">
                 <div class="row__col"><span class="year">2016</span></div>
                 <div class="row__col"><b>Developed desktop application for inventory control</b></div>
                 For this project I used:
@@ -74,7 +74,7 @@
                 <i>Gulp</i>,
                 <i>Pug</i>,
                 <i>Sass</i>.
-              </div>
+              </div> -->
               <div class="row">
                 <div class="row__col"><span class="year">2016 - 2018</span></div>
                 <div class="row__col"><b>Frontend developer in Voiptimecloud</b></div>
@@ -119,6 +119,7 @@
                 </div>
                 <div class="technology">
                   <b>Databases</b>
+                  <small>MongoDB, MySQL, PostgreSQL</small>
                 </div>
               </div>
             </div>
@@ -128,6 +129,19 @@
               <h3>Software skills</h3>
               <div class="technology">
                 Linux, macOS, Xcode, VSCode, npm, git, gulp, etc
+              </div>
+            </div>
+          </section>
+          <section class="block">
+            <div class="container">
+              <h3>Hobbies</h3>
+              <div class="technology">
+                <b>Sports/activities</b>
+                <small>mountain skiing, ecotourism</small>
+              </div>
+              <div class="technology">
+                <b>DIY</b>
+                <small>Arduino (developed small projects, e.g. desktop binary clock or room lighting system with remote brightness control from a smartphone via Bluetooth)</small>
               </div>
             </div>
           </section>
